--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
       <artifactId>cglib</artifactId>
       <version>3.2.4</version>
     </dependency>
+    <dependency>
+      <groupId>io.reactivex.rxjava2</groupId>
+      <artifactId>rxjava</artifactId>
+      <version>2.1.7</version>
+    </dependency>
   </dependencies>
 
   <build>
