--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     password: root
     url: jdbc:mysql://localhost:3306/kang?useUnicode=true&characterEncoding=utf-8&useSSL=false
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      auto-commit: false
 
 
 server:
